# hw-sw-coop

./: README.md
UCI_ADL/: README.md  anomaly_detector.py  parse_data.py  preprocess_AD.py  preprocess_classifier.py  train_lstm_AD.py  train_lstm_classifier.py
adaptive_quantization/: .gitignore  README.md  pareto_condition.py
adaptive_quantization/activations_error/: run.py  run1.sh  run2.sh
adaptive_quantization/dead_zones/: CMakeLists.txt  dead_zone_uniform_quantization_layer.cpp  list_quant_levels_activations.txt  list_quant_levels_weights.txt  pareto_condition.cpp  run.sh
adaptive_quantization/fine-tune/: run.py  run.sh  run1.sh  run3.sh  run4.sh
adaptive_quantization/inference-only/: run.py  run2.sh
adaptive_quantization/uci_har/: extract_variables.py  quantize.py  quantize_graph.py  tfrecord-builder.py  train_eval_cnn.py  train_eval_cnn_8bit_v2.py
adaptive_quantization/weights_error/: run.py  run1.sh  run2.sh
heart_monitor/: build_dataset.py  build_dataset_lstm.py  convert_to_spectrogram.py  label_images_prepro.py  readme.txt  train_model.py  train_model_lstm.py
heart_monitor/utils/: config.py  lstmnet.py  resnet.py
nas/: README.md
nas/Spearmint-PESM/: requirements.txt
nas/movidius/: Makefile  README.md  model_name_list  mvNCCheck.py  mvNCCompile.py  mvNCProfile.py  output.gv  (+4 more)
speech_commands/: models.py  res.txt  res2.txt  res3.txt  res4.txt  res5.txt  res6.txt  resul.txt  result.txt  tfrecord-builder.py  train.py  train1.py  train_test.py
uci_har/: fold_batch_norms.py  train_eval_cnn_4bit.py  train_eval_cnn_8bit_v2.py  train_eval_lstm.py
(+2538 files in other folders)
